--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
         </button>
       </form>
     </header>
+    <main>
+      <div class="container">
+        <ul class="gallery"></ul>
+      </div>
+    </main>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
